--- a/index.html
+++ b/index.html
@@ -253,17 +253,31 @@
 
         <!-- 
     /*section 3*/ -->
-        <!-- <section class="products">
-        <div class="container">
-            <h2 class="products-title">What are we doing</h2>
-            <ul class="products-title-list list">
-                <li class="products-item"><img src="./images/img1.jpg" width="360" alt="desktop computer"></li>
-                <li class="products-item"><img src="./images/img2.jpg" width="360" alt="reading messages on the phone">
-                </li>
-                <li class="products-item"><img src="./images/img3.jpg" width="360" alt="phone and laptop"></li>
-            </ul>
-        </div>
-    </section> -->
+        <section class="products">
+            <div class="container">
+                <h2 class="products-title">What are we doing</h2>
+                <ul class="products-title-list list">
+                    <li class="products-item">
+                        <img srcset="
+                          ./images/img1.jpg 1x,
+                          ./images/img1.jpg 2x
+                          " src="./images/img1.jpg" width="360" alt="desktop computer">
+                    </li>
+                    <li class="products-item">
+                        <img srcset="
+                          ./images/img2.jpg 1x,
+                          ./images/img2.jpg 2x
+                          " src="./images/img2.jpg" width="360" alt="reading messages on the phone">
+                    </li>
+                    <li class="products-item">
+                        <img srcset="
+                          ./images/img3.jpg 1x,
+                          ./images/img3.jpg 2x
+                          " src="./images/img3.jpg" width="360" alt="phone and laptop">
+                    </li>
+                </ul>
+            </div>
+        </section>
 
         <!-- /*section 4*/ -->
         <section class="team">
