--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </button>
                     <ul class="mob-menu-list list">
                         <li class="mob-menu-item">
-                            <a class="mob-menu-link link" href="./index.html">Studio</a>
+                            <a class="mob-studio-link link  " href="./index.html">Studio</a>
                         </li>
                         <li class="mob-menu-item">
                             <a class="mob-menu-link link" href="./portfolio.html">Portfolio</a>
